--- a/Browser/Browser.entitlements
+++ b/Browser/Browser.entitlements
@@ -34,8 +34,8 @@
 	</array>
 	<key>com.apple.security.temporary-exception.sbpl</key>
 	<array>
-		<string>(allow mach-issue-extension (require-all (extension-class &quot;com.apple.webkit.extension.mach&quot;)))</string>
-		<string>(allow iokit-issue-extension (require-all (extension-class &quot;com.apple.webkit.extension.iokit&quot;)))</string>
+		<string>(allow mach-issue-extension (require-all (extension-class "com.apple.webkit.extension.mach")))</string>
+		<string>(allow iokit-issue-extension (require-all (extension-class "com.apple.webkit.extension.iokit")))</string>
 	</array>
 </dict>
 </plist>
